[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphical-sort-lib"
version = "0.1.1"
description = "Tkinter-based sorting algorithm visualizer."
readme = "readme.md"
authors = [{ name = "Arthas1811" }]
requires-python = ">=3.9"
dependencies = ["matplotlib>=3.5"]
keywords = ["sorting", "visualizer", "tkinter", "education"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["graphicalSortLib*"]
